# FaxIScripts

./: .gitignore  CMakeLists.txt  FaxIScripts.sln  FaxIScripts.vcxproj  FaxIScripts.vcxproj.filters  eoe_config.xml  readme.md
docs/: doc.md  faxiscripts_doc.md  faxiscripts_mml.md
src/: main.cpp
src/common/klib/: Kfile.cpp  Kfile.h  Kstring.cpp  Kstring.h
src/fb/: BScriptLoader.cpp  BScriptLoader.h  BScriptOpcode.cpp  BScriptOpcode.h  BScriptReader.cpp  BScriptReader.h  BScriptWriter.cpp  BScriptWriter.h  fb_constants.h
src/fe/: Config.cpp  Config.h
src/fe/xml/: Xml_constants.h  Xml_helper.cpp  Xml_helper.h
src/fi/: AsmReader.cpp  AsmReader.h  AsmReaderStaticLinker.cpp  AsmWriter.cpp  AsmWriter.h  FaxString.cpp  FaxString.h  IScriptLoader.cpp  IScriptLoader.h  Opcode.cpp  Opcode.h  Shop.cpp  Shop.h  fi_constants.h
src/fi/cli/: Cli.cpp  Cli.h  application_constants.h
src/fm/: BinaryMod.cpp  BinaryMod.h  MMLReader.cpp  MMLReader.h  MMLWriter.cpp  MMLWriter.h  MScriptLoader.cpp  MScriptLoader.h  MusicOpcode.cpp  MusicOpcode.h  fm_constants.h  fm_util.cpp  fm_util.h
src/fm/song/: Fraction.cpp  Fraction.h  LilyPond.cpp  LilyPond.h  MMLChannel.cpp  MMLChannel.h  MMLEvent.h  MMLSong.cpp  MMLSong.h  MMLSongCollection.cpp  MMLSongCollection.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  mml_constants.h
src/fv/: MiscWriter.cpp  MiscWriter.h  fv_constants.h
src/mantra/: Mantra.cpp  Mantra.h  MantraCli.cpp  MantraCli.h  MantraCli_constants.h  mantra_constants.h  mantra_math.cpp  mantra_math.h
util/: FaxIScript.xml
